force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Custom_Evaluation_Logic__c.field-meta.xml
<CustomField>
    <fullName>Custom_Evaluation_Logic__c</fullName>
    <label>Custom Evaluation Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>