force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Override_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Status</label>
    <type>Checkbox</type>
</CustomField>