force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <label>Rule Evaluation Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>