force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Target_Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Target_Onboarding_Status__c</fullName>
    <label>Target Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Onboarding_Status_Picklist_Options</valueSetName>
    </valueSet>
</CustomField>