force-app/main/default/objects/Onboarding_Status_Rules_Engine__c/fields/Vendor_Program_Group__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Program_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor Program Group</label>
    <referenceTo>Vendor_Program_Group__c</referenceTo>
    <relationshipLabel>Onboarding Status Rules Engines</relationshipLabel>
    <relationshipName>Onboarding_Status_Rules_Engines</relationshipName>
    <type>Lookup</type>
</CustomField>